RESOLVED FIXED53829
WebKit2: Crash when InjectedBundlePageLoaderClient::willSendRequestForFrame returns a null WKURLRequestRef
https://bugs.webkit.org/show_bug.cgi?id=53829
Summary WebKit2: Crash when InjectedBundlePageLoaderClient::willSendRequestForFrame r...
Brian Weinstein
Reported 2011-02-04 17:58:17 PST
WebKit2: Crash when InjectedBundlePageLoaderClient::willSendRequestForFrame returns a null WKURLRequestRef.
Attachments
[PATCH] Fix (1.89 KB, patch)
2011-02-04 18:00 PST, Brian Weinstein
mjs: review+
Brian Weinstein
Comment 1 2011-02-04 18:00:40 PST
Created attachment 81331 [details] [PATCH] Fix
Maciej Stachowiak
Comment 2 2011-02-04 18:01:37 PST
Comment on attachment 81331 [details] [PATCH] Fix r=me
Brian Weinstein
Comment 3 2011-02-04 18:08:53 PST
Landed in r77713.
Note You need to log in before you can comment on or make changes to this bug.