WebKit2: Crash when InjectedBundlePageLoaderClient::willSendRequestForFrame returns a null WKURLRequestRef https://bugs.webkit.org/show_bug.cgi?id=53829

Reviewed by Maciej Stachowiak.

Store the result of m_client.willSendRequestForFrame in a RefPtr, and null check it before
calling resourceRequest() on it.

* WebProcess/InjectedBundle/InjectedBundlePageLoaderClient.cpp:
(WebKit::InjectedBundlePageLoaderClient::willSendRequestForFrame):



Canonical link: https://commits.webkit.org/67781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77713 268f45cc-cd09-0410-ab3c-d52691b4dbfc